--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none !important;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none !important;
+  scrollbar-width: none !important;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #fcf7f8;
